--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -1,6 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
-name: CI
+name: Weather
 
 # Controls when the action will run. 
 on:
@@ -9,14 +8,19 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+    - cron: 0 23 * * *
+
+env:
+  WEATHER_URL: https://tianqi.moji.com/weather/china/shanghai/pudong-new-district
+  WEATHER_HTML: weather.html
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  Weather:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,11 +30,22 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: The Weather Today
+        id: weather
+        run: |
+          curl -o ${{env.WEATHER_HTML}} ${{env.WEATHER_URL}}
+          WEATHER=`sed -n '6p' ${{env.WEATHER_HTML}} | cut -d '"' -f4 | cut -d '"' -f3`
+          echo "WEATHER=$WEATHER"  >> $GITHUB_ENV
+          echo "::set-output name=status::success"
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: WeChat Notification
+        if: steps.weather.outputs.status == 'success' && !cancelled()
+        run: curl https://sc.ftqq.com/${{ secrets.SERVERCHAN }}.send?text=天气?desp=${{env.WEATHER}}
+
+      # Runs a set of commands using the runners shell
+      - name: Delete Workflow Runs
+        uses: GitRML/delete-workflow-runs@main
+        with:
+          retain_days: 30
+          keep_minimum_runs: 10
