--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -1,53 +1,44 @@
-# This is a basic workflow to help you get started with Actions
+# workflow 名称
 name: Weather
 
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+on:   # 触发条件
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [ main ] # push代码后触发
+  workflow_dispatch: # GitHub 页面上手工触发
   schedule:
-    - cron: 0 23 * * *
+    - cron: 0 23 * * *  # 每天国际标准时间23点（北京时间早上7点）运行
 
-env:
-  WEATHER_URL: https://tianqi.moji.com/weather/china/shanghai/pudong-new-district
-  WEATHER_HTML: weather.html
+env: # 自定义参数
+  WEATHER_URL: https://tianqi.moji.com/weather/china/shanghai/pudong-new-district # 上海浦东天气url
+  WEATHER_HTML: weather.html # 天气临时文件
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   Weather:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+       # check out 代码
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      # 获取天气
       - name: The Weather Today
         id: weather
-        run: |
+        run: | 
           curl -o ${{env.WEATHER_HTML}} ${{env.WEATHER_URL}}
           WEATHER=`sed -n '6p' ${{env.WEATHER_HTML}} | cut -d '"' -f4 | cut -d '"' -f3`
           echo "WEATHER=$WEATHER"  >> $GITHUB_ENV
           echo "::set-output name=status::success"
 
-      # Runs a set of commands using the runners shell
+      # 通过 Server酱 发送微信通知
       - name: WeChat Notification
         if: steps.weather.outputs.status == 'success' && !cancelled()
         uses: yakumioto/serverchan-action@v1
         with:
-          key: ${{secrets.SERVERCHAN}}
-          text: 天气
-          desp: ${{env.WEATHER}}
+          key: ${{secrets.SERVERCHAN}} # Server酱 的 token
+          text: 今日天气 # 标题
+          desp: ${{env.WEATHER}} # 正文
 
-      # Runs a set of commands using the runners shell
+      # 删除旧的workflow
       - name: Delete Workflow Runs
         uses: GitRML/delete-workflow-runs@main
         with:
